<resources>
    <string name="app_name">AlcoBrowser</string>
    <string name="market">Mahazin</string>
    <string name="address_line">address line</string>
    <string name="city">city</string>
    <string name="postal_code">postal code</string>
    <string name="tel">Tel</string>
    <string name="fax">Fax</string>
    <string name="ok">ok</string>
    <string name="tel1">Tel:\u0020</string>
    <string name="fax1">Fax:\u0020</string>
    <string name="city1">City:\u0020</string>
    <string name="p_code">P.Code:\u0020</string>
</resources>
