<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycler_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/item_market_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/market"
                android:textColor="#000"
                android:textSize="20sp"
                app:fontFamily="@font/amita_bold" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/item_address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/address_line"
            android:textColor="#000"
            android:textSize="14sp"
            app:fontFamily="serif" />

        <TextView
            android:id="@+id/item_address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/address_line"
            android:textColor="#000"
            android:textSize="14sp"
            android:visibility="gone"
            app:fontFamily="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/city1"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/item_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/city"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/p_code"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/item_postal_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/postal_code"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/tel1"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/item_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tel"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/fax1"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/item_fax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/fax"
                    android:textColor="#000"
                    android:textSize="14sp"
                    app:fontFamily="serif" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>